RESOLVED FIXED159335
[Win] Animations tests are crashing in debug mode.
https://bugs.webkit.org/show_bug.cgi?id=159335
Summary [Win] Animations tests are crashing in debug mode.
Per Arne Vollan
Reported 2016-07-01 01:37:17 PDT
A MSVC runtime check fails because an uninitialized variable is being used.
Attachments
Patch (1.25 KB, patch)
2016-07-01 01:42 PDT, Per Arne Vollan
no flags
Per Arne Vollan
Comment 1 2016-07-01 01:42:59 PDT
Per Arne Vollan
Comment 2 2016-07-01 09:20:19 PDT
Thanks for reviewing!
WebKit Commit Bot
Comment 3 2016-07-01 09:40:19 PDT
Comment on attachment 282523 [details] Patch Clearing flags on attachment: 282523 Committed r202738: <http://trac.webkit.org/changeset/202738>
WebKit Commit Bot
Comment 4 2016-07-01 09:40:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.