[Win] Animations tests are crashing in debug mode. https://bugs.webkit.org/show_bug.cgi?id=159335

Reviewed by Alex Christensen.

A MSVC runtime check fails because an uninitialized variable is being used.

* css/StyleResolver.cpp:
(WebCore::StyleResolver::keyframeStylesForAnimation):


Canonical link: https://commits.webkit.org/177470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202738 268f45cc-cd09-0410-ab3c-d52691b4dbfc